--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,6 +10,7 @@
         <Button Content="ok" HorizontalAlignment="Left" Margin="70,68,0,0" VerticalAlignment="Top" Height="21" Width="86" Click="Button_Click"/>
         <TextBox HorizontalAlignment="Left" Margin="70,31,0,0" Name="txt1" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label Content="Name" HorizontalAlignment="Left" Margin="23,25,0,0" VerticalAlignment="Top"/>
+        <Button Content="the scond" HorizontalAlignment="Left" Margin="179,68,0,0" VerticalAlignment="Top" Click="Button_Click_1"/>
 
     </Grid>
 </Window>
